# waypoint_driving

./: CMakeLists.txt  README.md  package.xml
config/: params.yaml
firmware/argos_mr_core/: argos_mr_core.ino
include/: cloud_segment.h  driving_node.h  driving_node_old.h  waypoint_driving.h
launch/: no_serial_run.launch  run.launch
matlab/waypoint/: LenPP.m  Rot2.m  main_waypoint.m  main_waypoint2.m  main_waypoint3.m  main_waypoint4.m  main_waypoint5.m  main_waypoint5_reduce.m  main_waypoint5_reduce_move.m  mr_kinematics.m  ╡σ╖╬└╫1.vsd
matlab/waypoint2/: PrjLenP2L.m  PrjP2L.m  main.m  rk4.m
src/: cloud_segment.cpp  driving_node.cpp  driving_node_old.cpp  main.cpp  waypoint_driving.cpp
