<?xml version="1.0"?>
<package format="2">
  <name>waypoint_driving</name>
  <version>1.0.0</version>
  <description>
     The waypoint_driving package
  </description>
<license>Apache 2.0</license>
  <maintainer email="zang09@naver.com">Hae-bum Jung</maintainer>
  <author>Hae-bum Jung</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
  </export>
</package>
